--- a/Ques_Website/src/i18n/en.json
+++ b/Ques_Website/src/i18n/en.json
@@ -1,7 +1,6 @@
 {
   "translation": {
     "header": {
-      "home": "Home",
       "about": "About Us",
       "products": "Our Products",
       "team": "Our Team",
@@ -9,23 +8,12 @@
       "logo_text": "Ques",
       "language": "Language"
     },
-    "contact_modal": {
-      "title": "Contact Us",
-      "email": "Email",
-      "email_value": "quesappstore@gmail.com",
-      "social_media": "Social Media",
-      "close": "Close",
-      "wechat": "WeChat",
-      "message": "Have questions or suggestions? Get in touch with us!"
-    },
     "home_section": {
       "company_name": "Shenzhen Ques Technology Co., Ltd.",
       "tagline": "Building the OSINT Layer of AI Infrastructure"
     },
     "about_section": {
       "title": "About Us",
-      "company_name": "Shenzhen Ques Technology Co., Ltd.",
-      "tagline": "Building the OSINT Layer of AI Infrastructure",
       "description": "We're pioneering the next generation of open-source intelligence (OSINT) tools for the AI era. By combining cutting-edge reverse engineering techniques, machine learning models, and open-source data analysis, we deliver state-of-the-art accuracy in intelligence gathering and verification.",
       "mission_title": "Our Mission",
       "mission_description": "To empower companies and individuals with professional-grade OSINT capabilities. Whether you're building AI agents that need verified information or seeking personal intelligence tools, we provide the infrastructure that makes accurate, reliable open-source intelligence accessible to all.",
@@ -38,8 +26,6 @@
     },
     "products_section": {
       "title": "Our Products",
-      "subtitle": "AI-Powered Intelligence Tools",
-      "intro": "We build state-of-the-art OSINT tools that leverage artificial intelligence to transform how information is discovered and verified.",
       "geoseer_title": "GeoSeer",
       "geoseer_tagline": "AI-Powered Image Geolocation",
       "geoseer_description": "GeoSeer is a sophisticated platform that uses cutting-edge AI to identify locations from uploaded images. Combining geoestimation models, multi-agent analysis, and reasoning verification, it provides unprecedented accuracy in image-based geolocation.",
@@ -50,8 +36,7 @@
       "geoseer_feature_4": "Real-time processing with global coverage",
       "geoseer_feature_5": "Privacy-first approach - images never stored",
       "geoseer_feature_6": "Developer API for seamless integration",
-      "visit_website": "Visit Website",
-      "learn_more": "Learn More"
+      "visit_website": "Visit Website"
     },
     "team_section": {
       "title": "Our Team",
@@ -69,9 +54,6 @@
       "title": "Contact Us",
       "subtitle": "Get in touch with our team",
       "email_label": "Email",
-      "wechat_label": "WeChat",
-      "wechat_id": "Kusnomo_William",
-      "description": "Have questions or suggestions? We'd love to hear from you!",
       "social_media": "Follow Us"
     },
     "footer": {
