--- a/Ques_Website/src/i18n/cn.json
+++ b/Ques_Website/src/i18n/cn.json
@@ -10,15 +10,15 @@
     },
     "home_section": {
       "company_name": "深圳市快索科技有限公司",
-      "tagline": "构建AI基础设施的OSINT层"
+      "tagline": "构建下一代超级AI"
     },
     "about_section": {
       "title": "关于我们",
-      "description": "我们正在开创AI时代的下一代开源情报（OSINT）工具。通过结合尖端的逆向工程技术、机器学习模型和开源数据分析，我们在情报收集和验证方面提供最先进的准确性。",
+      "description": "我们正在构建下一代超级AI工具，突破可能性的边界。从尖端的OSINT解决方案起步，我们结合先进的机器学习、逆向工程和创新AI技术，打造展示前沿AI能力的应用程序。",
       "mission_title": "我们的使命",
-      "mission_description": "为企业和个人提供专业级的OSINT能力。无论您是在构建需要验证信息的AI代理，还是寻求个人情报工具，我们都提供基础设施，使准确、可靠的开源情报触手可及。",
+      "mission_description": "开发突破性的AI应用，测试前沿AI能力的极限。虽然我们目前专注于OSINT工具，但我们正在向多元化领域扩展——打造能够展示现代AI全部潜力的产品。",
       "vision_title": "我们的愿景",
-      "vision_description": "我们将自己定位为AI基础设施生态系统中领先的OSINT工具提供商。我们的技术弥合了原始开源数据和可操作情报之间的差距，实现更智能的AI系统和明智的决策。",
+      "vision_description": "我们致力于成为超级AI应用领域的先驱。超越OSINT，我们正在开拓新领域——创造重新定义行业标准的工具，证明下一波颠覆性AI产品已经到来。",
       "address_title": "办公地址",
       "address_value": "深圳市龙华区民治街道红山社区龙光玖钻北甲期A座807",
       "contact_title": "联系电话",
