--- a/Ques_Website/src/i18n/en.json
+++ b/Ques_Website/src/i18n/en.json
@@ -10,15 +10,15 @@
     },
     "home_section": {
       "company_name": "Shenzhen Ques Technology Co., Ltd.",
-      "tagline": "Building the OSINT Layer of AI Infrastructure"
+      "tagline": "Building the Next Super AI"
     },
     "about_section": {
       "title": "About Us",
-      "description": "We're pioneering the next generation of open-source intelligence (OSINT) tools for the AI era. By combining cutting-edge reverse engineering techniques, machine learning models, and open-source data analysis, we deliver state-of-the-art accuracy in intelligence gathering and verification.",
+      "description": "We're building the next generation of super AI tools that push the boundaries of what's possible. Starting with cutting-edge OSINT solutions, we combine advanced machine learning, reverse engineering, and innovative AI techniques to create applications that showcase frontier AI capabilities.",
       "mission_title": "Our Mission",
-      "mission_description": "To empower companies and individuals with professional-grade OSINT capabilities. Whether you're building AI agents that need verified information or seeking personal intelligence tools, we provide the infrastructure that makes accurate, reliable open-source intelligence accessible to all.",
+      "mission_description": "To develop groundbreaking AI applications that test the limits of frontier AI ability. While our current focus is OSINT tools, we're expanding into diverse domains—building products that demonstrate what becomes possible when you harness the full potential of modern AI.",
       "vision_title": "Our Vision",
-      "vision_description": "We position ourselves as the leading provider of OSINT tools in the AI infrastructure ecosystem. Our technology bridges the gap between raw open-source data and actionable intelligence, enabling smarter AI systems and informed decision-making.",
+      "vision_description": "We envision ourselves as pioneers in the super AI application space. Beyond OSINT, we're charting new territories—creating tools that redefine industry standards and prove that the next wave of transformative AI products is already here.",
       "address_title": "Office Address",
       "address_value": "Room 807, Block A, North Phase of Longguang Jiuzuan, Hongshan Community, Minzhi Street, Longhua District, Shenzhen",
       "contact_title": "Contact Phone",
